[gd_scene load_steps=3 format=2]

[ext_resource path="res://theme/FontBig.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/menus/FrameStutter.gd" type="Script" id=2]

[node name="FrameStutterMenu" type="Popup"]
margin_right = 960.0
margin_bottom = 520.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
margin_right = 848.0
margin_bottom = 30.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Enter User ID"
align = 1
valign = 2

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 34.0
margin_right = 848.0
margin_bottom = 38.0

[node name="UserID" type="TextEdit" parent="Panel/VBoxContainer"]
margin_top = 42.0
margin_right = 848.0
margin_bottom = 92.0
rect_min_size = Vector2( 200, 50 )

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 96.0
margin_right = 848.0
margin_bottom = 100.0

[node name="Submit" type="Button" parent="Panel/VBoxContainer"]
margin_top = 104.0
margin_right = 848.0
margin_bottom = 146.0
rect_min_size = Vector2( 0, 42 )
text = "Submit"

[node name="Back" type="Button" parent="Panel/VBoxContainer"]
margin_top = 150.0
margin_right = 848.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 42 )
text = "Back"

[connection signal="about_to_show" from="." to="." method="_on_FrameStutterMenu_about_to_show"]
[connection signal="text_changed" from="Panel/VBoxContainer/UserID" to="." method="_on_UserID_text_changed"]
[connection signal="focus_entered" from="Panel/VBoxContainer/Submit" to="." method="_on_Submit_focus_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/Submit" to="." method="_on_Submit_pressed"]
[connection signal="focus_entered" from="Panel/VBoxContainer/Back" to="." method="_on_Back_focus_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/Back" to="." method="_on_Back_pressed"]
